--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
    margin: 0;
    padding: 0;
    position: relative;
+   font-family: "Work Sans", serif;
 }
 
 .bg-img{
@@ -10,14 +11,34 @@ body{
 }
 
 .accordion-container{
-    width: 90%;
+    width: auto;
     border-radius: 10px;
-    height: 70vh;
+    height: auto;
     margin: 0 10px;
     background-color: hsl(0, 0%, 100%);
     position: absolute;
-    top: 8em;
+    top: 10em;
 }
+
+.accordion-card  , hr{
+    margin: 2em;
+}
+
+hr {
+    color: hsl(292, 16%, 49%);
+}
+.accordion-card  .question{
+    width: 58%;
+    color: hsl(292, 42%, 14%);
+}
+
+.question:hover{
+    cursor:poi;
+}
+
+
+
+
 main{
     display: flex;
     justify-content: center;
@@ -32,14 +53,23 @@ main{
 }
 .card-title h1{
     padding-left: .5em;
+    color: hsl(292, 42%, 14%);
+
+
 }
 
 .answer{
     display: none;
+    color: hsl(292, 16%, 49%);
+    width: 75%;
+    font-size: 1.11rem;
+    
+
 }
 
 .a-header{
     display: flex;
+    justify-content: space-between;
 }
 
 .show{
@@ -49,3 +79,4 @@ main{
 .minus-icon{
     display: none;
 }
+
